fixed spacing issue

--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -42,7 +42,7 @@ margin-top: 13rem;
 display: block;
 font-size: 17px;
 font-weight: 400;
-letter-spacing: 3px;
+letter-spacing: 1px;
 animation: moveInRight 3s ease-in;
 animation-fill-mode: both;
 }
